--- a/external/DearImGui/CMakeLists.txt.in
+++ b/external/DearImGui/CMakeLists.txt.in
@@ -3,7 +3,7 @@ project(dear-imgui-download NONE)
 include(ExternalProject)
 ExternalProject_Add(dear-imgui-download
   GIT_REPOSITORY    https://github.com/ocornut/imgui.git
-  GIT_TAG           v1.75
+  GIT_TAG           docking
   SOURCE_DIR        "${CMAKE_CURRENT_BINARY_DIR}/dear-imgui-src"
   BINARY_DIR        ""
   CONFIGURE_COMMAND ""
