--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,25 +1,31 @@
+project(game-library VERSION 0.0.1 LANGUAGES CXX)
+set(CMAKE_CXX_STANDARD 17)
+
+include(FetchContent)
+FetchContent_MakeAvailable(glfw dear-imgui)
+
 set(SOURCE_FILES
   glad.c
   init.cpp
   util.cpp
   3dmath.cpp
   ogl.cpp
-  ${PROJECT_BINARY_DIR}/_deps/dear-imgui-src/imgui.cpp
-  ${PROJECT_BINARY_DIR}/_deps/dear-imgui-src/imgui_draw.cpp
-  ${PROJECT_BINARY_DIR}/_deps/dear-imgui-src/imgui_widgets.cpp
-  ${PROJECT_BINARY_DIR}/_deps/dear-imgui-src/examples/imgui_impl_opengl3.cpp
-  ${PROJECT_BINARY_DIR}/_deps/dear-imgui-src/examples/imgui_impl_glfw.cpp)
+  ${PROJECT_BINARY_DIR}/../_deps/dear-imgui-src/imgui.cpp
+  ${PROJECT_BINARY_DIR}/../_deps/dear-imgui-src/imgui_draw.cpp
+  ${PROJECT_BINARY_DIR}/../_deps/dear-imgui-src/imgui_widgets.cpp
+  ${PROJECT_BINARY_DIR}/../_deps/dear-imgui-src/examples/imgui_impl_opengl3.cpp
+  ${PROJECT_BINARY_DIR}/../_deps/dear-imgui-src/examples/imgui_impl_glfw.cpp)
 
-add_library(game_engine ${SOURCE_FILES})
+add_library(game-library ${SOURCE_FILES})
 
-target_include_directories(game_engine
-  PRIVATE ${CMAKE_SOURCE_DIR}/inc/
-  PRIVATE ${PROJECT_BINARY_DIR}/_deps/dear-imgui-src/)
+target_include_directories(game-library
+  PUBLIC ../inc/
+  PRIVATE ${PROJECT_BINARY_DIR}/../_deps/dear-imgui-src/)
 
 if(CMAKE_CONFIGURATION_TYPES)
-  add_compile_definitions($<$<CONFIG:Debug>:NDEBUG>)
+  add_compile_definitions($<$<NOT:$<CONFIG:Debug>>:NDEBUG>)
 else()
-  if(CMAKE_BUILD_TYPE == "Debug")
+  if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
     add_compile_definitions(NDEBUG)
   endif()
 endif()
@@ -29,5 +35,5 @@ if(MSVC)
   add_compile_options(/W4 /WX)
 endif()
 
-target_link_libraries(game_engine PRIVATE glfw)
-set_target_properties(game_engine PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib/)
+target_link_libraries(game-library PRIVATE glfw)
+set_target_properties(game-library PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/)
